<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:orientation="vertical">


    <!-- CONTAINER LAYOUT -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/customer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:text="@string/customer_name_spelling"
                    android:textColor="@color/Black"
                    android:textSize="13dp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/total_outstanding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/total_outstanding"
                    android:textColor="@color/red_ToastColor"
                    android:textStyle="bold"
                    android:layout_alignBaseline="@+id/customer_name"
                    android:layout_alignBottom="@+id/customer_name"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/from_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="From Date :"
                    android:textColor="@color/Black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/to_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="To Date :"
                    android:textColor="@color/Black"
                    android:textStyle="bold"
                    android:layout_margin="5dp"
                    android:layout_below="@+id/from_date"
                    android:layout_alignLeft="@+id/from_date"
                    android:layout_alignStart="@+id/from_date" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_print"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:background="@drawable/button_actionbar_style"
                    android:fadingEdgeLength="5dp"
                    android:drawableLeft="@drawable/print2"
                    android:text="@string/print_spelling"
                    android:textColor="@color/ButtonText"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />


            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_text"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:paddingTop="4dp">

                <TextView
                    android:id="@+id/date_header"
                    style="@style/LightFont"
                    android:text="@string/date_spelling" />


                <TextView
                    android:id="@+id/verticalLine2"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/credit"
                    style="@style/LightFont"
                    android:text="@string/credit_spelling" />

                <TextView
                    android:id="@+id/verticalLine3"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/debit"
                    style="@style/LightFont"
                    android:text="@string/debit_spelling" />

            </LinearLayout>

            <!-- LIST VIEW BELOW -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ListView
                    android:id="@+id/customer_account_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@color/colorPrimaryDark"></ListView>

            </LinearLayout>


            <!-- LIST VIEW CLOSES ABOVE -->

        </LinearLayout>
    </LinearLayout>
    <!-- CONTAINER LAYOUT CLOSES ABOVE -->

</FrameLayout>