<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp">

        <Button
            android:id="@+id/button_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/button_actionbar_style"
            android:text="Close"
            android:textColor="@android:color/white" />


        <EditText
            android:id="@+id/editText_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/button_close"
            android:drawableRight="@drawable/search" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/headerSubCategoryList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_text"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/customer_name"
            style="@style/LightFont"
            android:text="@string/customer_name_spelling"/>

        <TextView
            android:id="@+id/verticalLine"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            />

        <TextView
            android:id="@+id/address"
            style="@style/LightFont"
            android:text="@string/address_spelling"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/customer_name"
            android:layout_toEndOf="@+id/customer_name"/>

        <TextView
            android:id="@+id/verticalLine2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            />

        <TextView
            android:id="@+id/mobile"
            style="@style/LightFont"
            android:singleLine="true"
            android:text="@string/mobile_spelling" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        >
        <ListView

            android:id="@+id/listView_customerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        </ListView>
    </LinearLayout>

</LinearLayout>