<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:orientation="vertical">


    <!-- CONTAINER LAYOUT -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:text="Date :"
                    android:textColor="@color/Black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/date_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:layout_toRightOf="@+id/date"
                    android:text="Date"
                    android:textColor="@color/Black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_cans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:layout_toLeftOf="@+id/total_cans_val"
                    android:text="@string/cans_in_market"
                    android:textColor="@color/red_ToastColor"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_cans_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:layout_alignParentRight="true"
                    android:text="0"
                    android:maxLength="3"
                    android:textColor="@color/Blue"
                    android:textStyle="bold" />

            </RelativeLayout>


            <LinearLayout
                android:id="@+id/headerSubCategoryList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_text"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/customer_name"
                    style="@style/LightFont"
                    android:text="@string/customer_name_spelling"/>


                <TextView
                    android:id="@+id/verticalLine2"
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:background="@color/colorPrimaryDark"
                    />

                <TextView
                    android:id="@+id/issue_date"
                    style="@style/LightFont"
                    android:text="@string/issue_date_spelling" />

                <TextView
                    android:id="@+id/verticalLine3"
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:background="@color/colorPrimaryDark"
                    />
                <TextView
                    android:id="@+id/quantity"
                    style="@style/LightFont"
                    android:text="@string/quantity_spelling" />

            </LinearLayout>

            <!-- LIST VIEW BELOW -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ListView
                    android:id="@+id/market_cans_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@color/colorPrimaryDark">
                </ListView>

            </LinearLayout>


            <!-- LIST VIEW CLOSES ABOVE -->

        </LinearLayout>
    </LinearLayout>
    <!-- CONTAINER LAYOUT CLOSES ABOVE -->

</FrameLayout>