<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <!-- CONTAINER LAYOUT -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >


           <!-- <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark" />-->


            <LinearLayout
                android:id="@+id/headerSubCategoryList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_text"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/customer_name"
                    style="@style/LightFont"
                    android:text="@string/customer_name_spelling"/>

                <TextView
                    android:id="@+id/verticalLine"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark"
                     />

                <TextView
                    android:id="@+id/address"
                    style="@style/LightFont"
                    android:text="@string/address_spelling"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/customer_name"
                    android:layout_toEndOf="@+id/customer_name"/>

                <TextView
                    android:id="@+id/verticalLine2"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark"
                    />

                <TextView
                    android:id="@+id/mobile"
                    style="@style/LightFont"
                    android:singleLine="true"
                    android:text="@string/mobile_spelling" />

            </LinearLayout>


            <!-- LIST VIEW BELOW -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ListView
                    android:id="@+id/customer_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@color/colorPrimaryDark">
                </ListView>
            </LinearLayout>

            <!-- LIST VIEW CLOSES ABOVE -->

        </LinearLayout>

    </LinearLayout>
    <!-- CONTAINER LAYOUT CLOSES ABOVE -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_cust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        app:rippleColor="@color/Black"
        android:layout_margin="16dp"
        android:src="@drawable/add2" />
</FrameLayout>