<?xml version="1.0" encoding="utf-8"?>
<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipe_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">



    <!-- Bottom View Start-->
    <LinearLayout
        android:id="@+id/bottom_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#CCCCFF">

            <ImageView
                android:id="@+id/edit_query1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/edit" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#C5405B">

            <ImageView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/delete" />
        </RelativeLayout>


    </LinearLayout>
    <!-- Bottom View End-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    <!-- Surface View Start -->
    <LinearLayout
        android:id="@+id/ll_Category_Row_Child"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_customer_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/Black"
            android:gravity="center"
            android:padding="9dp"
            android:text="@string/customer_name_spelling"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:id="@+id/verticalLine2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/txt_address1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/Black"
            android:padding="9dp"
            android:text="@string/address_spelling"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/verticalLine3"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/txt_mobile1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/Black"
            android:gravity="center"
            android:padding="9dp"
            android:text="@string/mobile_spelling"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>
    <!-- Surface View End -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"
        android:text="" />
    </LinearLayout>
</com.daimajia.swipe.SwipeLayout>
