<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:orientation="vertical">


    <!-- CONTAINER LAYOUT -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <EditText
                            android:id="@+id/search"
                            android:layout_width="400dp"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/search"
                            android:focusable="false"
                            android:ems="10"
                            android:includeFontPadding="true"
                            android:hint="Search"
                            android:inputType="text" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_addCust"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:paddingRight="5dp"
                        android:paddingLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/button_actionbar_style"
                        android:text="@string/walkin_customer_btn"
                        android:textColor="@color/ButtonText"/>
                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/headerSubCategoryList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_text"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/ordr_customer_name"
                    style="@style/LightFont"
                    android:text="@string/customer_name_spelling"/>


                <TextView
                    android:id="@+id/verticalLine2"
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:background="@color/colorPrimaryDark"
                    />

                <TextView
                    android:id="@+id/ordr_mobile"
                    style="@style/LightFont"
                    android:text="@string/mobile_spelling" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                 <TextView
                    android:id="@+id/not_found"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            </LinearLayout>


            <!-- LIST VIEW BELOW -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ListView
                    android:id="@+id/ordr_customer_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@color/colorPrimaryDark">
                </ListView>

            </LinearLayout>


            <!-- LIST VIEW CLOSES ABOVE -->

        </LinearLayout>
    </LinearLayout>
    <!-- CONTAINER LAYOUT CLOSES ABOVE -->

</FrameLayout>