<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:orientation="vertical">
            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:weightSum="1"
            android:id="@+id/linearLayout">

                    <TextView
                        android:id="@+id/customer_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/Black"
                        android:layout_margin="15dp"
                        android:textStyle="bold"
                        android:text="@string/customer_name_spelling"/>

                    <TextView
                        android:id="@+id/advance_given"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/Black"
                        android:layout_margin="15dp"
                        android:textStyle="bold"
                        android:text="@string/deposit_given" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/linearLayout"
                    android:layout_marginLeft="17dp"
                    android:layout_marginStart="17dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true">

                    <TextView
                        android:id="@+id/customer_name_val"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/Black"
                        android:layout_margin="15dp"
                        android:text="@string/customer_name_spelling"/>

                    <TextView
                        android:id="@+id/deposit_given_val"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/Black"
                        android:layout_margin="15dp"
                        android:text="0"/>

                </LinearLayout>
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/deposit_refund"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/returned"
                    android:ems="10"
                    android:drawablePadding="7dp"
                    android:maxLength="5"
                    android:hint="@string/deposit_refund"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_send_sms"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:background="@drawable/button_actionbar_style"
                android:text="Send SMS"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/ButtonText"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_close_account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:background="@drawable/button_actionbar_style"
                android:text="Close Account"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/ButtonText"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>